--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "typescript": "^5.6.3",
+    "mkdirp": "^3.0.1",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "mkdirp": "^3.0.1"    
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@playwright/test": "1.48.0",
-    "playwright": "1.48.0",
-    "sicolo": "^1.0.1",
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "@playwright/test": "^1.48.0",
+    "playwright": "^1.48.0",
+    "sicolo": "^1.0.1"
   },
   "scripts": {
     "clean": "rimraf ./artifacts && mkdirp ./artifacts",
@@ -33,7 +33,8 @@
     "scenario": "SET QA=1 && npx playwright test src/scenarios/CadastroDelivery.spec.ts --output artifacts/media --workers 1",
     "test": "SET QA=1 && npx playwright test --output artifacts/media --workers 1",
     "show-report": "npx playwright show-report artifacts/report",
-    "actions": "npx playwright test --output artifacts/media --workers 1",    
+    "actions": "npx playwright test --output artifacts/media --workers 1",
     "ci": "npm run clean && npm run format && npm run verify && npm run lint && npm run test"
-  }
+  },
+  "keywords": []
 }
